[package]
name = "msgp-abi"
version = "0.1.1"
authors = ["zensh <admin@zensh.com>"]
description = "ABI of msgp(Byte message protocol)."
documentation = "https://iorust.github.io/msgp-abi/msgp_abi"
homepage = "https://github.com/iorust/msgp-abi"
repository = "https://github.com/iorust/msgp-abi.git"
readme = "README.md"
keywords = ["message", "byte", "pipelining", "protocol", "stream"]
license = "MIT/Apache-2.0"

[dependencies]
msgp = "^0.1.1"
libc = "^0.2.14"

[lib]
# dylib, rlib, staticlib
crate-type = ["dylib"]
